glightbox and masonry

--- a/dz js glightbox & masonry/index.html
+++ b/dz js glightbox & masonry/index.html
@@ -14,48 +14,114 @@
       href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css"
     />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <header class="header">
-      <h1>Gallery</h1>
-    </header>
+    <h1>GLightbox gallery</h1>
 
-    <section class="gallery grid">
-      <div class="grid-sizer"></div>
-
-      <a href="img/1.jpg" class="grid-item glightbox">
-        <img src="img/1.jpg" alt="" />
+    <div class="grid">
+      <a
+        class="glightbox"
+        href="https://picsum.photos/900/500"
+        data-glightbox="type: image; effect: fade; width: 900px; height: auto; zoomable: true; draggable: true;"
+      >
+        <img src="https://picsum.photos/500/500" alt="" />
       </a>
 
-      <a href="img/2.jpg" class="grid-item glightbox">
-        <img src="img/2.jpg" alt="" />
+      <a
+        class="glightbox"
+        href="https://picsum.photos/900/500"
+        data-glightbox="type: image; effect: fade; width: 900px; height: auto; zoomable: true; draggable: true;"
+      >
+        <img src="https://picsum.photos/700/500" alt="" />
       </a>
 
-      <a href="img/3.jpg" class="grid-item glightbox tall">
-        <img src="img/3.jpg" alt="" />
+      <a
+        class="glightbox"
+        href="https://picsum.photos/900/500"
+        data-glightbox="type: image; effect: fade; width: 900px; height: auto; zoomable: true; draggable: true;"
+      >
+        <img src="https://picsum.photos/600/500" alt="" />
       </a>
 
-      <a href="img/4.jpg" class="grid-item glightbox wide">
-        <img src="img/4.jpg" alt="" />
+      <a
+        class="glightbox"
+        href="https://picsum.photos/900/500"
+        data-glightbox="type: image; effect: fade; width: 900px; height: auto; zoomable: true; draggable: true;"
+      >
+        <img src="https://picsum.photos/700/500" alt="" />
       </a>
 
-      <a href="img/5.jpg" class="grid-item glightbox">
-        <img src="img/5.jpg" alt="" />
+      <a
+        class="glightbox"
+        href="https://picsum.photos/900/500"
+        data-glightbox="type: image; effect: fade; width: 900px; height: auto; zoomable: true; draggable: true;"
+      >
+        <img src="https://picsum.photos/600/500" alt="" />
       </a>
 
-      <a href="img/6.jpg" class="grid-item glightbox tall">
-        <img src="img/6.jpg" alt="" />
+      <a
+        class="glightbox"
+        href="https://picsum.photos/900/500"
+        data-glightbox="type: image; effect: fade; width: 900px; height: auto; zoomable: true; draggable: true;"
+      >
+        <img src="https://picsum.photos/500/500" alt="" />
+      </a>
+      <a
+        class="glightbox"
+        href="https://picsum.photos/900/500"
+        data-glightbox="type: image; effect: fade; width: 900px; height: auto; zoomable: true; draggable: true;"
+      >
+        <img src="https://picsum.photos/500/500" alt="" />
       </a>
 
-      <a href="img/7.jpg" class="grid-item glightbox">
-        <img src="img/7.jpg" alt="" />
+      <a
+        class="glightbox"
+        href="https://picsum.photos/900/500"
+        data-glightbox="type: image; effect: fade; width: 900px; height: auto; zoomable: true; draggable: true;"
+      >
+        <img src="https://picsum.photos/700/500" alt="" />
       </a>
-    </section>
+
+      <a
+        class="glightbox"
+        href="https://picsum.photos/900/500"
+        data-glightbox="type: image; effect: fade; width: 900px; height: auto; zoomable: true; draggable: true;"
+      >
+        <img src="https://picsum.photos/600/500" alt="" />
+      </a>
+
+      <a
+        class="glightbox"
+        href="https://picsum.photos/900/500"
+        data-glightbox="type: image; effect: fade; width: 900px; height: auto; zoomable: true; draggable: true;"
+      >
+        <img src="https://picsum.photos/700/500" alt="" />
+      </a>
+
+      <a
+        class="glightbox"
+        href="https://picsum.photos/900/500"
+        data-glightbox="type: image; effect: fade; width: 900px; height: auto; zoomable: true; draggable: true;"
+      >
+        <img src="https://picsum.photos/600/500" alt="" />
+      </a>
+
+      <a
+        class="glightbox"
+        href="https://picsum.photos/900/500"
+        data-glightbox="type: image; effect: fade; width: 900px; height: auto; zoomable: true; draggable: true;"
+      >
+        <img src="https://picsum.photos/500/500" alt="" />
+      </a>
+    </div>
 
     <!-- GLightbox JS -->
     <script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js"></script>
 
-    <script src="script.js"></script>
+    <!-- Masonry JS -->
+    <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+
+    <script src="./script.js"></script>
   </body>
 </html>
