--- a/dz js glightbox & masonry/index.html
+++ b/dz js glightbox & masonry/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gallery Masonry</title>
 
-    <!-- Masonry CDN -->
-    <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- GLightbox CSS -->
     <link
@@ -19,108 +22,147 @@
   <body>
     <h1>GLightbox gallery</h1>
 
-    <div class="grid">
-      <a
-        class="glightbox"
-        href="https://picsum.photos/900/500"
-        data-glightbox="type: image; effect: fade; width: 900px; height: auto; zoomable: true; draggable: true;"
-      >
-        <img src="https://picsum.photos/500/500" alt="" />
-      </a>
+    <div class="grid-container">
+      <div class="grid">
+        <a
+          class="grid-item glightbox"
+          href="https://picsum.photos/seed/img1/1200/800.jpg"
+          data-gallery="gallery1"
+        >
+          <img
+            src="https://picsum.photos/seed/img1/400/300.jpg"
+            alt="Gallery Image 1"
+          />
+        </a>
 
-      <a
-        class="glightbox"
-        href="https://picsum.photos/900/500"
-        data-glightbox="type: image; effect: fade; width: 900px; height: auto; zoomable: true; draggable: true;"
-      >
-        <img src="https://picsum.photos/700/500" alt="" />
-      </a>
+        <a
+          class="grid-item glightbox"
+          href="https://picsum.photos/seed/img2/800/1200.jpg"
+          data-gallery="gallery1"
+        >
+          <img
+            src="https://picsum.photos/seed/img2/400/600.jpg"
+            alt="Gallery Image 2"
+          />
+        </a>
 
-      <a
-        class="glightbox"
-        href="https://picsum.photos/900/500"
-        data-glightbox="type: image; effect: fade; width: 900px; height: auto; zoomable: true; draggable: true;"
-      >
-        <img src="https://picsum.photos/600/500" alt="" />
-      </a>
+        <a
+          class="grid-item glightbox"
+          href="https://picsum.photos/seed/img3/1200/800.jpg"
+          data-gallery="gallery1"
+        >
+          <img
+            src="https://picsum.photos/seed/img3/400/300.jpg"
+            alt="Gallery Image 3"
+          />
+        </a>
 
-      <a
-        class="glightbox"
-        href="https://picsum.photos/900/500"
-        data-glightbox="type: image; effect: fade; width: 900px; height: auto; zoomable: true; draggable: true;"
-      >
-        <img src="https://picsum.photos/700/500" alt="" />
-      </a>
+        <a
+          class="grid-item glightbox"
+          href="https://picsum.photos/seed/img4/800/800.jpg"
+          data-gallery="gallery1"
+        >
+          <img
+            src="https://picsum.photos/seed/img4/400/400.jpg"
+            alt="Gallery Image 4"
+          />
+        </a>
 
-      <a
-        class="glightbox"
-        href="https://picsum.photos/900/500"
-        data-glightbox="type: image; effect: fade; width: 900px; height: auto; zoomable: true; draggable: true;"
-      >
-        <img src="https://picsum.photos/600/500" alt="" />
-      </a>
+        <a
+          class="grid-item glightbox"
+          href="https://picsum.photos/seed/img5/1200/900.jpg"
+          data-gallery="gallery1"
+        >
+          <img
+            src="https://picsum.photos/seed/img5/400/300.jpg"
+            alt="Gallery Image 5"
+          />
+        </a>
 
-      <a
-        class="glightbox"
-        href="https://picsum.photos/900/500"
-        data-glightbox="type: image; effect: fade; width: 900px; height: auto; zoomable: true; draggable: true;"
-      >
-        <img src="https://picsum.photos/500/500" alt="" />
-      </a>
-      <a
-        class="glightbox"
-        href="https://picsum.photos/900/500"
-        data-glightbox="type: image; effect: fade; width: 900px; height: auto; zoomable: true; draggable: true;"
-      >
-        <img src="https://picsum.photos/500/500" alt="" />
-      </a>
+        <a
+          class="grid-item glightbox"
+          href="https://picsum.photos/seed/img6/800/1200.jpg"
+          data-gallery="gallery1"
+        >
+          <img
+            src="https://picsum.photos/seed/img6/400/600.jpg"
+            alt="Gallery Image 6"
+          />
+        </a>
 
-      <a
-        class="glightbox"
-        href="https://picsum.photos/900/500"
-        data-glightbox="type: image; effect: fade; width: 900px; height: auto; zoomable: true; draggable: true;"
-      >
-        <img src="https://picsum.photos/700/500" alt="" />
-      </a>
+        <a
+          class="grid-item glightbox"
+          href="https://picsum.photos/seed/img7/1200/800.jpg"
+          data-gallery="gallery1"
+        >
+          <img
+            src="https://picsum.photos/seed/img7/400/300.jpg"
+            alt="Gallery Image 7"
+          />
+        </a>
 
-      <a
-        class="glightbox"
-        href="https://picsum.photos/900/500"
-        data-glightbox="type: image; effect: fade; width: 900px; height: auto; zoomable: true; draggable: true;"
-      >
-        <img src="https://picsum.photos/600/500" alt="" />
-      </a>
+        <a
+          class="grid-item glightbox"
+          href="https://picsum.photos/seed/img8/800/800.jpg"
+          data-gallery="gallery1"
+        >
+          <img
+            src="https://picsum.photos/seed/img8/400/400.jpg"
+            alt="Gallery Image 8"
+          />
+        </a>
 
-      <a
-        class="glightbox"
-        href="https://picsum.photos/900/500"
-        data-glightbox="type: image; effect: fade; width: 900px; height: auto; zoomable: true; draggable: true;"
-      >
-        <img src="https://picsum.photos/700/500" alt="" />
-      </a>
+        <a
+          class="grid-item glightbox"
+          href="https://picsum.photos/seed/img9/1200/900.jpg"
+          data-gallery="gallery1"
+        >
+          <img
+            src="https://picsum.photos/seed/img9/400/300.jpg"
+            alt="Gallery Image 9"
+          />
+        </a>
 
-      <a
-        class="glightbox"
-        href="https://picsum.photos/900/500"
-        data-glightbox="type: image; effect: fade; width: 900px; height: auto; zoomable: true; draggable: true;"
-      >
-        <img src="https://picsum.photos/600/500" alt="" />
-      </a>
+        <a
+          class="grid-item glightbox"
+          href="https://picsum.photos/seed/img10/800/1200.jpg"
+          data-gallery="gallery1"
+        >
+          <img
+            src="https://picsum.photos/seed/img10/400/600.jpg"
+            alt="Gallery Image 10"
+          />
+        </a>
 
-      <a
-        class="glightbox"
-        href="https://picsum.photos/900/500"
-        data-glightbox="type: image; effect: fade; width: 900px; height: auto; zoomable: true; draggable: true;"
-      >
-        <img src="https://picsum.photos/500/500" alt="" />
-      </a>
+        <a
+          class="grid-item glightbox"
+          href="https://picsum.photos/seed/img11/1200/800.jpg"
+          data-gallery="gallery1"
+        >
+          <img
+            src="https://picsum.photos/seed/img11/400/300.jpg"
+            alt="Gallery Image 11"
+          />
+        </a>
+
+        <a
+          class="grid-item glightbox"
+          href="https://picsum.photos/seed/img12/800/800.jpg"
+          data-gallery="gallery1"
+        >
+          <img
+            src="https://picsum.photos/seed/img12/400/400.jpg"
+            alt="Gallery Image 12"
+          />
+        </a>
+      </div>
     </div>
-
-    <!-- GLightbox JS -->
-    <script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js"></script>
 
     <!-- Masonry JS -->
     <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+
+    <!-- GLightbox JS -->
+    <script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js"></script>
 
     <script src="./script.js"></script>
   </body>
